Merge trunk to branch [r3423:3657] for QUADS_QUERY_BRANCH.
Resolved conflicts in 

build.xml (ctc_utils edit was reapplied in one section of the file).

AbstractEmbeddedFederationTestCase (accepted change were some fields were changed from public to private).

git-svn-id: svn+ssh://svn.code.sf.net/p/bigdata/code/branches/QUADS_QUERY_BRANCH@3658 8f7bc0f5-282e-0410-95e3-8d296e9bb460